--- a/dataimporter.ipynb
+++ b/dataimporter.ipynb
@@ -11,7 +11,8 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "import os.path"
+    "import os.path\n",
+    "import time"
    ]
   },
   {
@@ -39,7 +40,7 @@
     "members = pd.DataFrame(data)\n",
     "members.columns = members.iloc[0]\n",
     "members = members[1:]\n",
-    "#members = members.set_index(['PATID']) #makes PATID the row index instead of integers\n",
+    "members = members.set_index(['PATID']) #makes PATID the row index instead of integers, not sure it's worth it.\n",
     "\n",
     "with open(filepath+csvfilenames[2]) as datafile:\n",
     "    filecontents = csv.reader(datafile, delimiter = \",\")\n",
@@ -74,8 +75,7 @@
    "source": [
     "allmedical['STD_COST']=allmedical['STD_COST'].apply(pd.to_numeric) #change entries to numbers\n",
     "rxdata.loc[rxdata['STD_COST']=='None', 'STD_COST']=0 #change all nones to zeros\n",
-    "rxdata['STD_COST']=rxdata['STD_COST'].apply(pd.to_numeric) #change all entries to numbers\n",
-    "members['totalcost']=0 #add a column to members dataframe to store cost of member"
+    "rxdata['STD_COST']=rxdata['STD_COST'].apply(pd.to_numeric) #change all entries to numbers"
    ]
   },
   {
@@ -84,13 +84,57 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#k=0\n",
-    "#while k < len(rxdata):\n",
-    "#    members[rxdata.iloc[k]['PATID']]['totalcost']+=rxdata.iloc[k][STD_COST]\n",
-    "#    k+=1\n",
-    "#members\n",
-    "\n",
-    "#None of this block works, but rxdata.iloc[k]['PATID'] does at least return the PATID corresponding to the row, which is helpful?"
+    "#completely unnecessary for faster version of code below\n",
+    "members = members.sort_values(['PATID'])\n",
+    "rxdata = rxdata.sort_values(['PATID'])\n",
+    "allmedical = allmedical.sort_values(['PATID'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#slower version - don't run\n",
+    "tick = time.clock()\n",
+    "members['totalcost']=0\n",
+    "print len(members)\n",
+    "print len(rxdata)\n",
+    "k=0\n",
+    "j=0\n",
+    "while k < len(members):\n",
+    "    while j < len(rxdata) and rxdata.iloc[j]['PATID']==members.iloc[k].name:\n",
+    "        members.iloc[k,3] += rxdata.iloc[j]['STD_COST']\n",
+    "        j+=1\n",
+    "    k+=1\n",
+    "    if k % 1000 == 0:\n",
+    "        print k\n",
+    "        tock = time.clock()\n",
+    "        print tock-tick\n",
+    "    \n",
+    "print j, len(rxdata), k, len(members)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#faster version\n",
+    "tick = time.clock()\n",
+    "members['totalcost']=0\n",
+    "print len(members)\n",
+    "print len(rxdata)\n",
+    "k=0\n",
+    "while k < len(rxdata):\n",
+    "    members.loc[rxdata.iloc[k]['PATID'],'totalcost']+=rxdata.iloc[k]['STD_COST']\n",
+    "    k += 1\n",
+    "    if k % 60000 == 0:\n",
+    "        print k\n",
+    "        tock=time.clock()\n",
+    "        print tock-tick"
    ]
   },
   {
