gets rid of unwanted data

--- a/dataimporter.ipynb
+++ b/dataimporter.ipynb
@@ -12,7 +12,8 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "import os.path\n",
-    "import time"
+    "import time\n",
+    "import functions"
    ]
   },
   {
@@ -84,10 +85,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#completely unnecessary for faster version of code below\n",
-    "members = members.sort_values(['PATID'])\n",
-    "rxdata = rxdata.sort_values(['PATID'])\n",
-    "allmedical = allmedical.sort_values(['PATID'])"
+    "allmedical['wanted']=True"
    ]
   },
   {
@@ -96,24 +94,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#slower version - don't run\n",
     "tick = time.clock()\n",
-    "members['totalcost']=0\n",
-    "print len(members)\n",
-    "print len(rxdata)\n",
     "k=0\n",
-    "j=0\n",
-    "while k < len(members):\n",
-    "    while j < len(rxdata) and rxdata.iloc[j]['PATID']==members.iloc[k].name:\n",
-    "        members.iloc[k,3] += rxdata.iloc[j]['STD_COST']\n",
-    "        j+=1\n",
-    "    k+=1\n",
-    "    if k % 1000 == 0:\n",
+    "while k < len(allmedical):\n",
+    "    if not (functions.wanted(allmedical.iloc[k,9]) and functions.wanted(allmedical.iloc[k,10])):\n",
+    "        allmedical.iloc[k, 20] = False\n",
+    "    k += 1\n",
+    "    if k % 100000 == 0:\n",
     "        print k\n",
     "        tock = time.clock()\n",
-    "        print tock-tick\n",
-    "    \n",
-    "print j, len(rxdata), k, len(members)"
+    "        print tock-tick"
    ]
   },
   {
@@ -122,19 +112,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#faster version\n",
+    "wantedmedical = allmedical[allmedical.wanted]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "tick = time.clock()\n",
     "members['totalcost']=0\n",
-    "print len(members)\n",
-    "print len(rxdata)\n",
+    "#add rxdata to member's total cost\n",
     "k=0\n",
     "while k < len(rxdata):\n",
     "    members.loc[rxdata.iloc[k]['PATID'],'totalcost']+=rxdata.iloc[k]['STD_COST']\n",
     "    k += 1\n",
-    "    if k % 60000 == 0:\n",
+    "    if k % 100000 == 0:\n",
     "        print k\n",
     "        tock=time.clock()\n",
-    "        print tock-tick"
+    "        print tock-tick\n",
+    "print 'Done with rxdata! Moving on to medical data'\n",
+    "tick=time.clock()\n",
+    "while k < len(wantedmedical):\n",
+    "    members.loc[wantedmedical.iloc[k]['PATID'],'totalcost']+=wantedmedical.iloc[k]['STD_COST']\n",
+    "    k += 1\n",
+    "    if k % 100000 == 0:\n",
+    "        print k\n",
+    "        tock=time.clock()\n",
+    "        print tock-tick\n",
+    "print \"yaaaaaaaay\""
    ]
   },
   {
