Made everything faster

--- a/dataimporter.ipynb
+++ b/dataimporter.ipynb
@@ -85,7 +85,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "allmedical['wanted']=True"
+    "allmedical['wanted']=True\n",
+    "\n",
+    "medical_wanted = allmedical[('630' >=  allmedical.DIAG1) | (allmedical.DIAG1 >= '67999')]\n",
+    "medical_wanted = medical_wanted[('630' >=  medical_wanted.DIAG2) | (medical_wanted.DIAG2 >= '67999')]\n",
+    "\n",
+    "medical_wanted = medical_wanted[('800' >=  medical_wanted.DIAG1) | (medical_wanted.DIAG1 >= '95999')]\n",
+    "medical_wanted = medical_wanted[('800' >=  medical_wanted.DIAG2) | (medical_wanted.DIAG2 >= '95999')]\n",
+    "\n",
+    "medical_wanted = medical_wanted[medical_wanted['DIAG1'].str.startswith('E') == False]\n",
+    "medical_wanted = medical_wanted[medical_wanted['DIAG2'].str.startswith('E') == False]\n",
+    "\n",
+    "medical_wanted = medical_wanted[(medical_wanted['DIAG1'].str.startswith('V3') == False) & (medical_wanted['DIAG1'].str.startswith('V22') == False) & (medical_wanted['DIAG1'].str.startswith('V23') == False) & (medical_wanted['DIAG1'].str.startswith('V24') == False) & (medical_wanted['DIAG1'].str.startswith('V28') == False) & (medical_wanted['DIAG1'].str.startswith('V91') == False)]\n",
+    "medical_wanted = medical_wanted[(medical_wanted['DIAG2'].str.startswith('V3') == False) & (medical_wanted['DIAG2'].str.startswith('V22') == False) & (medical_wanted['DIAG2'].str.startswith('V23') == False) & (medical_wanted['DIAG2'].str.startswith('V24') == False) & (medical_wanted['DIAG2'].str.startswith('V28') == False) & (medical_wanted['DIAG2'].str.startswith('V91') == False)]\n"
    ]
   },
   {
@@ -94,11 +106,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#This has been improved upon above. Run that instead\n",
+    "\n",
     "tick = time.clock()\n",
     "k=0\n",
     "while k < len(allmedical):\n",
-    "    if not (functions.wanted(allmedical.iloc[k,9]) and functions.wanted(allmedical.iloc[k,10])):\n",
-    "        allmedical.iloc[k, 20] = False\n",
+    "    if not (functions.wanted(allmedical.iat[k,9]) and functions.wanted(allmedical.iat[k,10])):\n",
+    "        allmedical.iat[k, 20] = False\n",
     "    k += 1\n",
     "    if k % 100000 == 0:\n",
     "        print k\n",
@@ -121,12 +135,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#This has been improved upon below. Do not run this one.\n",
+    "\n",
     "tick = time.clock()\n",
     "members['totalcost']=0\n",
     "#add rxdata to member's total cost\n",
     "k=0\n",
     "while k < len(rxdata):\n",
-    "    members.loc[rxdata.iloc[k]['PATID'],'totalcost']+=rxdata.iloc[k]['STD_COST']\n",
+    "    members.at[rxdata.iloc[k]['PATID'],'totalcost']+=rxdata.iloc[k]['STD_COST']\n",
     "    k += 1\n",
     "    if k % 100000 == 0:\n",
     "        print k\n",
@@ -134,14 +150,43 @@
     "        print tock-tick\n",
     "print 'Done with rxdata! Moving on to medical data'\n",
     "tick=time.clock()\n",
+    "k=0\n",
     "while k < len(wantedmedical):\n",
-    "    members.loc[wantedmedical.iloc[k]['PATID'],'totalcost']+=wantedmedical.iloc[k]['STD_COST']\n",
+    "    members.at[wantedmedical.iloc[k]['PATID'],'totalcost']+=wantedmedical.iloc[k]['STD_COST']\n",
     "    k += 1\n",
     "    if k % 100000 == 0:\n",
     "        print k\n",
     "        tock=time.clock()\n",
     "        print tock-tick\n",
     "print \"yaaaaaaaay\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "members['totalcost'] = 0.0 #add rxdata to member's total cost\n",
+    "members['rxcost'] = 0.0\n",
+    "members['medicalcost'] = 0.0\n",
+    "\n",
+    "dummy = rxdata.groupby('PATID')['STD_COST'].sum()\n",
+    "#print dummy\n",
+    "\n",
+    "for k in range(len(dummy)):\n",
+    "    members.at[dummy.index[k],'totalcost'] += dummy.iat[k]\n",
+    "    members.at[dummy.index[k], 'rxcost'] = dummy.iat[k]\n",
+    "    #print type(members.at[dummy.index[k],'totalcost'])\n",
+    "    \n",
+    "dummy = medical_wanted.groupby('PATID')['STD_COST'].sum()\n",
+    "#print dummy.head()\n",
+    "\n",
+    "for k in range(len(dummy)):\n",
+    "    members.at[dummy.index[k], 'totalcost'] += dummy.iat[k]\n",
+    "    members.at[dummy.index[k], 'medicalcost'] = dummy.iat[k]\n",
+    "    \n",
+    "#print members.head()\n"
    ]
   },
   {
