Plotted average cost by location of procedure and region of patient

--- a/dataimporter.ipynb
+++ b/dataimporter.ipynb
@@ -209,6 +209,43 @@
    "source": [
     "allmedical.sort_values([\"STD_COST\"], ascending = [1])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "location_series = medical_wanted.groupby('POS')['STD_COST'].mean()\n",
+    "\n",
+    "location_series.plot.bar()\n",
+    "plt.ylim([0,2000])\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Add new column for region (should find a way to avoid this with groupby, but can't currently)\n",
+    "members['region'] = members.apply(lambda row: functions.US_region(row), axis=1)\n",
+    "\n",
+    "region_series = members.groupby('region')['totalcost'].mean()\n",
+    "\n",
+    "region_series.plot.bar()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reload(functions)"
+   ]
   }
  ],
  "metadata": {
