--- a/dataimporter.ipynb
+++ b/dataimporter.ipynb
@@ -382,6 +382,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Plot average cost for all POS codes\n",
     "location_series = medical_wanted.groupby('POS')['STD_COST'].mean()\n",
     "\n",
     "location_series.plot.bar()\n",
