Added more bins for prescriptions and plotted changes in prescription costs relative to time since diagnosis

--- a/dataimporter.ipynb
+++ b/dataimporter.ipynb
@@ -130,6 +130,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Don't run this\n",
     "targetallmedical.columns = targetallmedical.iloc[0]\n",
     "targetallmedical = targetallmedical[1:]\n",
     "\n",
@@ -569,7 +570,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "#colors = {'F': 'red', 'M': 'blue', 'U': 'green'}\n",
+    "colors = {'F': 'red', 'M': 'blue', 'U': 'green'}\n",
     "members.plot.scatter(x ='totalcost', y = 'targetcost', c = members['region'].apply(lambda x: colors[x]))\n",
     "#plt.ylim(0, 300000) #not the actual upper limit, ignoring ncdude\n",
     "#plt.xlim(0, 3000000)\n",
@@ -584,8 +585,8 @@
    "source": [
     "colors = {'Midwest':'red', 'Northeast': 'blue', 'South':'pink', 'UN':'black', 'West':'green'}\n",
     "members.plot.scatter(x ='totalcost', y = 'targetcost', c = members['region'].apply(lambda x: colors[x]))\n",
-    "plt.ylim(0, 110000) #not the actual upper limit, ignoring ncdude\n",
-    "plt.xlim(100000, 3000000)\n",
+    "plt.ylim(0, 1100000) #not the actual upper limit, ignoring ncdude\n",
+    "plt.xlim(000000, 3000000)\n",
     "plt.show()\n",
     "#it appears we can safely exclude people who cost more than 1000000 to begin with.\n",
     "#Err, include."
