--- a/dataimporter.ipynb
+++ b/dataimporter.ipynb
@@ -10,8 +10,8 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "import os.path\n",
+    "#import seaborn as sns\n",
+    "#import os.path\n",
     "import time\n",
     "import functions"
    ]
@@ -87,6 +87,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "len(rxdata)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "medical_wanted = allmedical[('630' >=  allmedical.DIAG1) | (allmedical.DIAG1 >= '67999')]\n",
     "medical_wanted = medical_wanted[('630' >=  medical_wanted.DIAG2) | (medical_wanted.DIAG2 >= '67999')]\n",
     "\n",
@@ -127,41 +138,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Don't run this\n",
-    "targetallmedical.columns = targetallmedical.iloc[0]\n",
-    "targetallmedical = targetallmedical[1:]\n",
-    "\n",
-    "medical_wanted_t = targetallmedical[('630' >=  targetallmedical.DIAG1) | (targetallmedical.DIAG1 >= '67999')]\n",
-    "medical_wanted_t = medical_wanted_t[('630' >=  medical_wanted_t.DIAG2) | (medical_wanted_t.DIAG2 >= '67999')]\n",
-    "\n",
-    "medical_wanted_t = medical_wanted_t[('800' >=  medical_wanted_t.DIAG1) | (medical_wanted_t.DIAG1 >= '95999')]\n",
-    "medical_wanted_t = medical_wanted_t[('800' >=  medical_wanted_t.DIAG2) | (medical_wanted_t.DIAG2 >= '95999')]\n",
-    "\n",
-    "medical_wanted_t = medical_wanted_t[medical_wanted_t['DIAG1'].str.startswith('E') == False]\n",
-    "medical_wanted_t = medical_wanted_t[medical_wanted_t['DIAG2'].str.startswith('E') == False]\n",
-    "\n",
-    "medical_wanted_t = medical_wanted_t[(medical_wanted_t['DIAG1'].str.startswith('V3') == False) & \n",
-    "                                    (medical_wanted_t['DIAG1'].str.startswith('V22') == False) & \n",
-    "                                    (medical_wanted_t['DIAG1'].str.startswith('V23') == False) & \n",
-    "                                    (medical_wanted_t['DIAG1'].str.startswith('V24') == False) & \n",
-    "                                    (medical_wanted_t['DIAG1'].str.startswith('V28') == False) & \n",
-    "                                    (medical_wanted_t['DIAG1'].str.startswith('V91') == False)]\n",
-    "medical_wanted_t = medical_wanted_t[(medical_wanted_t['DIAG2'].str.startswith('V3') == False) & \n",
-    "                                    (medical_wanted_t['DIAG2'].str.startswith('V22') == False) & \n",
-    "                                    (medical_wanted_t['DIAG2'].str.startswith('V23') == False) & \n",
-    "                                    (medical_wanted_t['DIAG2'].str.startswith('V24') == False) & \n",
-    "                                    (medical_wanted_t['DIAG2'].str.startswith('V28') == False) & \n",
-    "                                    (medical_wanted_t['DIAG2'].str.startswith('V91') == False)]\n",
-    "del(targetallmedical)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "medical_wanted.to_csv('trainingmedicalwanted.csv')\n",
@@ -171,7 +150,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "medical_wanted_t.to_csv('targetmedicalwanted.csv')\n",
@@ -181,7 +162,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "medical_wanted['STD_COST']=medical_wanted['STD_COST'].apply(pd.to_numeric) #change entries to numbers\n",
@@ -201,26 +184,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
-   "source": [
-    "with open(filepath+csvfilenames[6]) as datafile:\n",
-    "    filecontents = csv.reader(datafile, delimiter = \",\")\n",
-    "    data = list(filecontents)\n",
-    "\n",
-    "targetrxdata = pd.DataFrame(data)\n",
-    "targetrxdata.columns = targetrxdata.iloc[0]\n",
-    "targetrxdata = targetrxdata[1:]\n",
-    "\n",
-    "targetrxdata.loc[targetrxdata['STD_COST']=='None', 'STD_COST']=0 #change all nones to zeros\n",
-    "targetrxdata['STD_COST']=targetrxdata['STD_COST'].apply(pd.to_numeric) #change all entries to numbers\n",
-    "targetrxdata['DAYS_FROM_DIAG'] = targetrxdata['DAYS_FROM_DIAG'].apply(pd.to_numeric)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#add training data\n",
@@ -265,7 +240,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#all potentially completely useless\n",
@@ -286,7 +263,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#The next several blocks add counters to the member dataframe for the number of visits to different types of facilities"
@@ -295,7 +274,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#emergency=['23','24', '21', '41', '20', '42']\n",
@@ -321,7 +302,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#psychiatric=['53', '55', '51', '52', '57'] # 51 is inpatient faciliity, 55 is res. sub. abuse\n",
@@ -345,7 +328,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#regular=['11', '01', '81','22', '60', '49', '71', '62', '17', '50', '61', '03']\n",
@@ -377,7 +362,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#elderly=['13', '31', '32', '33']\n",
@@ -401,7 +388,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#home=['12', '14', '15']\n",
@@ -424,7 +413,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#dialysis=['65']\n",
@@ -445,7 +436,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#hospice=['34']\n",
@@ -466,7 +459,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#unknown=['99', 'None']\n",
@@ -488,7 +483,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "members"
@@ -497,7 +494,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Plot average cost for all POS codes\n",
@@ -511,7 +510,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Add new column for region (should find a way to avoid this with groupby, but can't currently)\n",
@@ -526,7 +527,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "members.to_csv('members.csv')\n"
@@ -535,7 +538,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# A collection of plots:\n",
@@ -546,7 +551,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Also note we're looking for a little more than the upper 15% of costs:\n",
@@ -557,7 +564,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "members"
@@ -566,7 +575,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "\n",
@@ -580,7 +591,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "colors = {'Midwest':'red', 'Northeast': 'blue', 'South':'pink', 'UN':'black', 'West':'green'}\n",
@@ -595,7 +608,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "submembers = members[members['totalcost']<1000000]"
@@ -604,7 +619,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "colors = {'Midwest':'red', 'Northeast': 'blue', 'South':'pink', 'UN':'black', 'West':'green'}\n",
@@ -617,7 +634,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "colors = {'Midwest':'red', 'Northeast': 'blue', 'South':'pink', 'UN':'black', 'West':'green'}\n",
@@ -628,7 +647,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "colors = {'Midwest':'red', 'Northeast': 'blue', 'South':'pink', 'UN':'black', 'West':'green'}\n",
@@ -641,7 +662,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "submembers = submembers[submembers['hospicevisits']<15]"
@@ -650,7 +673,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "colors = {'Midwest':'red', 'Northeast': 'blue', 'South':'pink', 'UN':'black', 'West':'green'}\n",
@@ -663,7 +688,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#can safely remove people who spent more than 400000 on prescriptions \n",
@@ -678,7 +705,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "submembers = submembers[submembers['rxcost']<400000]"
@@ -687,7 +716,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#there's a point at which high numbers of office visits imply something\n",
@@ -701,7 +732,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#not so much with high numbers of emergency room visits\n",
@@ -715,7 +748,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#maybe with psychiatric though\n",
@@ -729,7 +764,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
