--- a/dataimporterfromsaves.ipynb
+++ b/dataimporterfromsaves.ipynb
@@ -124,6 +124,138 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "members['infpardisdiag']=0 #001-139\n",
+    "members['neoplasmsdiag']=0 #140-239\n",
+    "#members['endocrinediag']=1 #240-279, needs to be split up\n",
+    "members['blooddiag']=0 #280-289\n",
+    "members['mentaldiag']=0 #290-319\n",
+    "members['nervediag']=0 #320-359\n",
+    "members['sensediag']=0 #360-389\n",
+    "members['circdiag']=0 #390-489\n",
+    "members['respdiag']=0 #460-519\n",
+    "members['digestdiag']=0 #520-579\n",
+    "members['genitdiag']=0 #580-629\n",
+    "members['skindiag']=0 #608-709\n",
+    "members['muscskeldiag']=0 #710-739\n",
+    "members['conganomdiag']=0 #740-759\n",
+    "members['illdefdiag']=0 #780-799\n",
+    "\n",
+    "dummy = medical_wanted.groupby('PATID')\n",
+    "patids = list(members.index)\n",
+    "for k in patids:\n",
+    "    try:\n",
+    "        tinydummy = dummy.get_group(k)\n",
+    "        if len(tinydummy[(tinydummy['DIAG1']>='001') & (tinydummy['DIAG1']<='13999')]):\n",
+    "            members.loc[k,'infpardisdiag']=1\n",
+    "        if len(tinydummy[(tinydummy['DIAG1']>='140') & (tinydummy['DIAG1']<='23999')]):\n",
+    "            members.loc[k,'neoplasmsdiag']=1\n",
+    "        if len(tinydummy[(tinydummy['DIAG1']>='280') & (tinydummy['DIAG1']<='28999')]):\n",
+    "            members.loc[k,'blooddiag']=1\n",
+    "        if len(tinydummy[(tinydummy['DIAG1']>='290') & (tinydummy['DIAG1']<='31999')]):\n",
+    "            members.loc[k,'mentaldiag']=1\n",
+    "        if len(tinydummy[(tinydummy['DIAG1']>='320') & (tinydummy['DIAG1']<='35999')]):\n",
+    "            members.loc[k,'nervediag']=1\n",
+    "        if len(tinydummy[(tinydummy['DIAG1']>='360') & (tinydummy['DIAG1']<='38999')]):\n",
+    "            members.loc[k,'sensediag']=1\n",
+    "        if len(tinydummy[(tinydummy['DIAG1']>='390') & (tinydummy['DIAG1']<='48999')]):\n",
+    "            members.loc[k,'circdiag']=1\n",
+    "        if len(tinydummy[(tinydummy['DIAG1']>='460') & (tinydummy['DIAG1']<='51999')]):\n",
+    "            members.loc[k,'respdiag']=1\n",
+    "        if len(tinydummy[(tinydummy['DIAG1']>='520') & (tinydummy['DIAG1']<='57999')]):\n",
+    "            members.loc[k,'digestdiag']=1\n",
+    "        if len(tinydummy[(tinydummy['DIAG1']>='580') & (tinydummy['DIAG1']<='62999')]):\n",
+    "            members.loc[k,'genitdiag']=1\n",
+    "        if len(tinydummy[(tinydummy['DIAG1']>='608') & (tinydummy['DIAG1']<='70999')]):\n",
+    "            members.loc[k,'skindiag']=1\n",
+    "        if len(tinydummy[(tinydummy['DIAG1']>='710') & (tinydummy['DIAG1']<='73999')]):\n",
+    "            members.loc[k,'muscskeldiag']=1\n",
+    "        if len(tinydummy[(tinydummy['DIAG1']>='740') & (tinydummy['DIAG1']<='75999')]):\n",
+    "            members.loc[k,'conganomdiag']=1\n",
+    "        if len(tinydummy[(tinydummy['DIAG1']>='780') & (tinydummy['DIAG1']<='79999')]):\n",
+    "            members.loc[k,'illdefdiag']=1  \n",
+    "    except KeyError:\n",
+    "        pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "members['allergies'] =0 # 04\n",
+    "members['antiinfectives']=0 # 08\n",
+    "members['antineoplastic']=0 #10\n",
+    "members['autonomic']=0 #12\n",
+    "members['bloodfromcoag']=0 #20\n",
+    "members['cardiovascular']=0 #24\n",
+    "members['centralnervous']=0 #28\n",
+    "members['contraceptives']=0 #32\n",
+    "members['dental'] = 0 #34\n",
+    "members['electrolytic']=0 #40\n",
+    "members['enzymes']=0 #44\n",
+    "members['coughstuff']=0 #48\n",
+    "members['opthamlic']=0 #52\n",
+    "members['gastrointestinal']=0 #56\n",
+    "members['hormones']=0 #68\n",
+    "members['oxytocics']=0 #76\n",
+    "members['skinstuff']=0 #84\n",
+    "members['vitamins']=0 #88\n",
+    "members['asthma/alcohol'] = 0 #92\n",
+    "\n",
+    "dummy = rxdata.groupby('PATID')\n",
+    "patids = list(members.index)\n",
+    "for k in patids:\n",
+    "    try:\n",
+    "        tinydummy = dummy.get_group(k)\n",
+    "        if len(tinydummy[(tinydummy['AHFSCLSS'].str.startswith('04'))]):\n",
+    "            members.loc[k,'allergies']=1\n",
+    "        if len(tinydummy[(tinydummy['AHFSCLSS'].str.startswith('08'))]):\n",
+    "            members.loc[k,'antiinfectives']=0\n",
+    "        if len(tinydummy[(tinydummy['AHFSCLSS'].str.startswith('10'))]):\n",
+    "            members.loc[k,'antineoplastic']=1\n",
+    "        if len(tinydummy[(tinydummy['AHFSCLSS'].str.startswith('12'))]):\n",
+    "            members.loc[k,'autonomic']=1\n",
+    "        if len(tinydummy[(tinydummy['AHFSCLSS'].str.startswith('20'))]):\n",
+    "            members.loc[k,'bloodfromcoag']=1\n",
+    "        if len(tinydummy[(tinydummy['AHFSCLSS'].str.startswith('24'))]):\n",
+    "            members.loc[k,'cardiovascular']=1\n",
+    "        if len(tinydummy[(tinydummy['AHFSCLSS'].str.startswith('28'))]):\n",
+    "            members.loc[k,'centralnervous']=1\n",
+    "        if len(tinydummy[(tinydummy['AHFSCLSS'].str.startswith('32'))]):\n",
+    "            members.loc[k,'contraceptives']=1\n",
+    "        if len(tinydummy[(tinydummy['AHFSCLSS'].str.startswith('34'))]):\n",
+    "            members.loc[k,'dental']=1\n",
+    "        if len(tinydummy[(tinydummy['AHFSCLSS'].str.startswith('40'))]):\n",
+    "            members.loc[k,'electrolytic']=1\n",
+    "        if len(tinydummy[(tinydummy['AHFSCLSS'].str.startswith('44'))]):\n",
+    "            members.loc[k,'enzymes']=1\n",
+    "        if len(tinydummy[(tinydummy['AHFSCLSS'].str.startswith('48'))]):\n",
+    "            members.loc[k,'coughstuff']=1\n",
+    "        if len(tinydummy[(tinydummy['AHFSCLSS'].str.startswith('52'))]):\n",
+    "            members.loc[k,'opthamlic']=1\n",
+    "        if len(tinydummy[(tinydummy['AHFSCLSS'].str.startswith('56'))]):\n",
+    "            members.loc[k,'gastrointestinal']=1\n",
+    "        if len(tinydummy[(tinydummy['AHFSCLSS'].str.startswith('68'))]):\n",
+    "            members.loc[k,'hormones']=1\n",
+    "        if len(tinydummy[(tinydummy['AHFSCLSS'].str.startswith('76'))]):\n",
+    "            members.loc[k,'oxytocics']=1\n",
+    "        if len(tinydummy[(tinydummy['AHFSCLSS'].str.startswith('84'))]):\n",
+    "            members.loc[k,'skinstuff']=1\n",
+    "        if len(tinydummy[(tinydummy['AHFSCLSS'].str.startswith('88'))]):\n",
+    "            members.loc[k,'vitamins']=1\n",
+    "        if len(tinydummy[(tinydummy['AHFSCLSS'].str.startswith('92'))]):\n",
+    "            members.loc[k,'asthma/alcohol']=1\n",
+    "    except KeyError:\n",
+    "        pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -195,6 +327,44 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#incredibly slow, probs don't bother running this.\n",
+    "\n",
+    "members['avgdaysrxnodoctor']=0\n",
+    "dummy=rxdata.groupby('PATID')\n",
+    "dummy2=medical_wanted.groupby('PATID')\n",
+    "patids = list(members.index)\n",
+    "\n",
+    "\n",
+    "for k in patids:\n",
+    "    try:\n",
+    "        mylist = []\n",
+    "        rxvisits = list(dummy.get_group(k)['DAYS_FROM_DIAG'])\n",
+    "        for j in rxvisits:\n",
+    "            mylist.append(np.absolute(dummy2.get_group(k)['DAYS_FROM_DIAG']-j).min())           \n",
+    "            members.loc[k, 'avgdaysrxnodoctor']=np.mean(mylist)\n",
+    "    except KeyError:\n",
+    "        pass\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "tinydummy = dummy.get_group(k)['DAYS_FROM_DIAG'])\n",
+    "        tinydummy['daysfromdoctor']=0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -202,9 +372,12 @@
    "source": [
     "#Interesting codes in AHFSCLSS (so far) \n",
     "#681200: birthcontrol, \n",
-    "#682004: biguanides (diabetes related), \n",
+    "#682004: biguanides (diabetes related), turns out to be useless\n",
     "#682008: insulin \n",
-    "#281604: antidepressents\n"
+    "#281604: antidepressents\n",
+    "#241212: ED drugs\n",
+    "#682020: Glypizide class (some kind of diabetes thing), useless\n",
+    "#28080424: Aspirins (salicilate), useless"
    ]
   },
   {
@@ -218,8 +391,9 @@
     "members['daysperinsulinrx']=0\n",
     "members['daysperantideprx']=0\n",
     "members['daysperbcrx']=0\n",
-    "members['daysperbiguaniderx']=0\n",
-    "members['daysperalphaglucosidaserx']=0\n",
+    "members['daysperedrx']=0\n",
+    "members['daysperglyprx']=0\n",
+    "members['daysperasprinrx']=0\n",
     "\n",
     "patids = list(members.index)\n",
     "rxdata = rxdata.sort_values('DAYS_FROM_DIAG')\n",
@@ -236,12 +410,12 @@
     "        moretinydummy=tinydummy[tinydummy['AHFSCLSS'].str.startswith('681200')]\n",
     "        if len(moretinydummy)>0:\n",
     "            members.loc[k,'daysperbcrx']=moretinydummy['DAYS_FROM_DIAG'].diff(periods=1).mean()\n",
-    "        moretinydummy=tinydummy[tinydummy['AHFSCLSS'].str.startswith('682004')]\n",
+    "        moretinydummy=tinydummy[tinydummy['AHFSCLSS'].str.startswith('241212')]\n",
     "        if len(moretinydummy)>0:\n",
-    "            members.loc[k,'daysperbiguaniderx']=moretinydummy['DAYS_FROM_DIAG'].diff(periods=1).mean()\n",
-    "        moretinydummy=tinydummy[tinydummy['AHFSCLSS'].str.startswith('682002')]\n",
-    "        if len(moretinydummy)>0:\n",
-    "            members.loc[k,'daysperalphaglucosidaserx']=moretinydummy['DAYS_FROM_DIAG'].diff(periods=1).mean()\n",
+    "            members.loc[k,'daysperedrx']=moretinydummy['DAYS_FROM_DIAG'].diff(periods=1).mean()\n",
+    "        moretinydummy=tinydummy[tinydummy['AHFSCLSS'].str.startswith('682020')]\n",
+    "\n",
+    "\n",
     "    except KeyError:\n",
     "        pass"
    ]
@@ -249,7 +423,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "members['avginsulincost']=0\n",
@@ -278,25 +454,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "k='33014323454.0'\n",
-    "tinydummy=dummy.get_group(k)\n",
-    "moretinydummy=tinydummy[tinydummy['AHFSCLSS'].str.startswith('682008')]\n",
-    "if len(moretinydummy)>0:\n",
-    "    print moretinydummy['STD_COST']\n",
-    "moretinydummy=tinydummy[tinydummy['AHFSCLSS'].str.startswith('281604')]\n",
-    "if len(moretinydummy)>0:\n",
-    "    print moretinydummy['STD_COST'].mean()\n",
-    "moretinydummy=tinydummy[tinydummy['AHFSCLSS'].str.startswith('681200')]\n",
-    "if len(moretinydummy)>0:\n",
-    "    print moretinydummy['DAYS_FROM_DIAG'].mean()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -304,32 +461,6 @@
    "source": [
     "members['lasttimerxnodoctor']=np.absolute(members['maxrxday']-members['maxmedicalday'])\n",
     "members['firsttimerxnodoctor']=np.absolute(members['minmedicalday']-members['minrxday'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# A collection of plots:\n",
-    "#Note: in this situation, we're looking for people who cost around 12k and more:\n",
-    "members.sort_values('targetcost', ascending = 0).iloc[6000]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# Also note we're looking for a little more than the upper 15% of costs:\n",
-    "series = members['targetcost']\n",
-    "series.quantile([.15, .3, .5, .7, .85, .9 , .95, 1])"
    ]
   },
   {
@@ -349,7 +480,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Our one good plot\n",
@@ -381,7 +514,6 @@
    },
    "outputs": [],
    "source": [
-    "\n",
     "members_for_work = members\n",
     "dummies = pd.get_dummies(members_for_work.region)\n",
     "members_for_work = members_for_work.join(dummies)\n",
@@ -392,7 +524,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "members_for_work = members_for_work.drop('gender', axis = 1)\n",
@@ -442,7 +576,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "mean_squared_error(members_y_test, members_y_pred)"
@@ -451,7 +587,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "regr.coef_"
@@ -526,8 +664,7 @@
     "members_for_trees = members_for_trees.drop('psychvisits', axis = 1)\n",
     "members_for_trees = members_for_trees.drop('elderlyvisits', axis = 1)\n",
     "members_for_trees = members_for_trees.drop('dialysisvisits', axis = 1)\n",
-    "members_for_trees = members_for_trees.drop('hospicevisits', axis = 1)\n",
-    "members_for_trees = members_for_trees.drop('daysperalphaglucosidaserx', axis=1)"
+    "members_for_trees = members_for_trees.drop('hospicevisits', axis = 1)"
    ]
   },
   {
@@ -537,11 +674,13 @@
    "outputs": [],
    "source": [
     "#Make True/False variable for our trees\n",
-    "members_for_trees_expensive = members_for_trees[members_for_trees['targetcost']>=50000]\n",
+    "members_for_trees_expensive = members_for_trees[members_for_trees['targetcost']>=12500]\n",
     "members_for_trees_expensive['expensive']=True\n",
-    "members_for_trees_inexpensive = members_for_trees[members_for_trees['targetcost']<50000]\n",
+    "members_for_trees_inexpensive = members_for_trees[members_for_trees['targetcost']<12500]\n",
     "members_for_trees_inexpensive['expensive']=False\n",
-    "members_for_trees = members_for_trees_expensive.append(members_for_trees_inexpensive)"
+    "members_for_trees = members_for_trees_expensive.append(members_for_trees_inexpensive)\n",
+    "\n",
+    "members_for_trees_vexpensive = members_for_trees[members_for_trees['targetcost']>=100000]"
    ]
   },
   {
@@ -550,8 +689,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "\n",
     "#Make a little dataframe that's half expensive, half not, choosing a random collection on inexpensive each time\n",
-    "percentage = float(len(members_for_trees_expensive))/len(members_for_trees_inexpensive)\n",
+    "percentage = float(len(members_for_trees_vexpensive))/len(members_for_trees_inexpensive)\n",
     "msk = np.random.rand(len(members_for_trees_inexpensive)) < percentage\n",
     "members_for_small_trees = members_for_trees_expensive.append(members_for_trees_inexpensive[msk])\n",
     "\n",
@@ -572,7 +713,7 @@
     "x_test = x_test.drop('targetcost', axis = 1)\n",
     "\n",
     "#Make the tree\n",
-    "dt = DecisionTreeClassifier(min_samples_split=100)\n",
+    "dt = DecisionTreeClassifier(min_samples_split=200)\n",
     "dt.fit(x_train, y_train)\n",
     "\n",
     "#Add predictions to original stuff\n",
@@ -588,15 +729,6 @@
     "#check_falsepos = check[(not check['expensive']) & (check['pred'])]\n",
     "print float(len(check_truetrue))/len(check_true)\n",
     "print float(len(check_truetrue))/len(check_predtrue)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.tree import DecisionTreeClassifier"
    ]
   },
   {
@@ -641,7 +773,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#crossvalidation setup - presently designed for big trees\n",
@@ -663,7 +797,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "output"
@@ -721,7 +857,7 @@
    "source": [
     "#Crossvalidation for variable importance for trees on little sets.\n",
     "\n",
-    "importances = [0 for k in range(32)]\n",
+    "importances = [0 for k in range(71)]\n",
     "k=0\n",
     "while k < 100:\n",
     "    percentage = float(len(members_for_trees_expensive))/len(members_for_trees_inexpensive)\n",
@@ -743,7 +879,7 @@
     "        color=\"r\", align=\"center\")\n",
     "plt.xticks(range(x_train.shape[1]), range(len(x_train.columns)))\n",
     "plt.xlim([-1, x_train.shape[1]])\n",
-    "plt.show()eless"
+    "plt.show()"
    ]
   },
   {
@@ -756,22 +892,6 @@
     "\n",
     "x_train.columns "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
